; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_transited.c_free_realms.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_transited.c_free_realms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tr_realm = type { %struct.tr_realm*, %struct.tr_realm* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tr_realm*)* @free_realms to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_realms(%struct.tr_realm* %0) #0 {
  %2 = alloca %struct.tr_realm*, align 8
  %3 = alloca %struct.tr_realm*, align 8
  store %struct.tr_realm* %0, %struct.tr_realm** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.tr_realm*, %struct.tr_realm** %2, align 8
  %6 = icmp ne %struct.tr_realm* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %4
  %8 = load %struct.tr_realm*, %struct.tr_realm** %2, align 8
  store %struct.tr_realm* %8, %struct.tr_realm** %3, align 8
  %9 = load %struct.tr_realm*, %struct.tr_realm** %2, align 8
  %10 = getelementptr inbounds %struct.tr_realm, %struct.tr_realm* %9, i32 0, i32 1
  %11 = load %struct.tr_realm*, %struct.tr_realm** %10, align 8
  store %struct.tr_realm* %11, %struct.tr_realm** %2, align 8
  %12 = load %struct.tr_realm*, %struct.tr_realm** %3, align 8
  %13 = getelementptr inbounds %struct.tr_realm, %struct.tr_realm* %12, i32 0, i32 0
  %14 = load %struct.tr_realm*, %struct.tr_realm** %13, align 8
  %15 = call i32 @free(%struct.tr_realm* %14)
  %16 = load %struct.tr_realm*, %struct.tr_realm** %3, align 8
  %17 = call i32 @free(%struct.tr_realm* %16)
  br label %4

18:                                               ; preds = %4
  ret void
}

declare dso_local i32 @free(%struct.tr_realm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
